--- a/languages/woo-refund-and-exchange-lite-en_US.pot
+++ b/languages/woo-refund-and-exchange-lite-en_US.pot
@@ -14,7 +14,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Language: en_US\n"
 "X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr;esc_attr_e;esc_attr_x;"
-"esc_html;esc_html_e;esc_html__;esc_html_x;_n_noop;_nx_noop\n"
+"esc_html__;esc_html_e;esc_html__;esc_html_x;_n_noop;_nx_noop\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: admin/class-woo-refund-and-exchange-lite-admin.php:110
