--- a/languages/woo-refund-and-exchange-lite-en_US.po
+++ b/languages/woo-refund-and-exchange-lite-en_US.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Return Refund and Exchange for Woocommerce 3.1.0\n"
-"POT-Creation-Date: 2021-11-02 19:20+0530\n"
-"PO-Revision-Date: 2021-11-02 19:20+0530\n"
+"POT-Creation-Date: 2021-11-03 13:42+0530\n"
+"PO-Revision-Date: 2021-11-03 13:42+0530\n"
 "Last-Translator: \n"
 "Language-Team: MakeWebBetter\n"
 "Language: en_US\n"
@@ -302,7 +302,7 @@ msgid "Add a message"
 msgstr ""
 
 #: admin/partials/mwb-rnx-lite-order-msg-history-meta.php:87
-msgid "Write a message you want to sent to the Customer."
+msgid "Write a message you want to send to the Customer."
 msgstr ""
 
 #: admin/partials/mwb-rnx-lite-order-msg-history-meta.php:89
@@ -842,7 +842,7 @@ msgid "Message has been sent."
 msgstr ""
 
 #: public/partials/mwb-rnx-lite-view-order-msg.php:55
-msgid "Write a message you want to sent to the Shop Manager."
+msgid "Write a message you want to send to the Shop Manager"
 msgstr ""
 
 #: public/partials/mwb-rnx-lite-view-order-msg.php:58
