--- a/languages/woo-refund-and-exchange-lite.pot
+++ b/languages/woo-refund-and-exchange-lite.pot
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Return Refund and Exchange for Woocommerce 3.1.3\n"
-"POT-Creation-Date: 2021-11-03 14:04+0530\n"
+"POT-Creation-Date: 2022-01-11 17:32+0530\n"
 "PO-Revision-Date: 2021-04-02 10:47+0530\n"
 "Last-Translator: \n"
 "Language-Team: MakeWebBetter\n"
@@ -10,7 +10,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.3\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr__;esc_attr_e;esc_attr_x;"
@@ -862,13 +862,30 @@ msgstr ""
 msgid "Go Premium"
 msgstr ""
 
-#: woocommerce-refund-and-exchange-lite.php:569
+#: woocommerce-refund-and-exchange-lite.php:599
+msgid "IMPORTANT NOTICE-"
+msgstr ""
+
+#: woocommerce-refund-and-exchange-lite.php:602
+msgid ""
+"From this update[here]onwards, the plugin and its support will be handled by "
+"WP Swings. WP Swings is just our improvised and rebranded version with all "
+"quality solutions and help being the same, so no worries at your end."
+msgstr ""
+
+#: woocommerce-refund-and-exchange-lite.php:604
+msgid ""
+"Please connect with us for all setup, support, and update related queries "
+"without hesitation."
+msgstr ""
+
+#: woocommerce-refund-and-exchange-lite.php:624
 msgid ""
 "Woocommerce is not activated, Please activate Woocommerce first to install "
 "WooCommerce Refund and Exchange Lite."
 msgstr ""
 
-#: woocommerce-refund-and-exchange-lite.php:588
+#: woocommerce-refund-and-exchange-lite.php:643
 msgid ""
 "WooCommerce RMA | Return-Refund-Exchange is activated so you did not need to "
 "install WooCommerce Refund and Exchange Lite because the Main version "
