--- a/languages/woo-refund-and-exchange-lite.pot
+++ b/languages/woo-refund-and-exchange-lite.pot
@@ -1,28 +1,33 @@
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Return Refund and Exchange for WooCommerce 4.0.2\n"
-"POT-Creation-Date: 2022-07-05 12:49+0530\n"
-"PO-Revision-Date: 2021-08-21 11:15+0530\n"
+"Project-Id-Version: Return Refund and Exchange for WooCommerce 4.0.4\n"
+"POT-Creation-Date: 2022-07-05 13:57+0530\n"
+"PO-Revision-Date: 2022-07-05 13:57+0530\n"
 "Last-Translator: \n"
 "Language-Team: WP Swings\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.0.6\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: en_US\n"
-"X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr_e;esc_attr_x;"
-"esc_html__;esc_html_e;esc_html__;esc_html_x;_n_noop;_nx_noop\n"
 "X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr__;esc_attr_e;esc_attr_x;"
+"esc_html;esc_html__;esc_html_e;esc_html_x;_n_noop;_nx_noop;"
+"translate_nooped_plural\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Poedit-SearchPathExcluded-0: build\n"
-"X-Poedit-SearchPathExcluded-1: admin/js/wps-rma-swal.js\n"
-"X-Poedit-SearchPathExcluded-2: node_modules\n"
 
 #: admin/class-woo-refund-and-exchange-lite-admin.php:156
 msgid "Policy already exist"
+msgstr ""
+
+#: admin/class-woo-refund-and-exchange-lite-admin.php:171
+msgid "WP Swings"
+msgstr ""
+
+#: admin/class-woo-refund-and-exchange-lite-admin.php:231
+msgid "Return Refund and Exchange for WooCommerce"
 msgstr ""
 
 #: admin/class-woo-refund-and-exchange-lite-admin.php:356
@@ -196,8 +201,7 @@ msgstr ""
 
 #: admin/class-woo-refund-and-exchange-lite-admin.php:871
 msgid ""
-"Product Stock is not updated as manage stock setting of product is "
-"disable."
+"Product Stock is not updated as manage stock setting of product is disable."
 msgstr ""
 
 #: admin/class-woo-refund-and-exchange-lite-admin.php:873
@@ -273,6 +277,10 @@ msgstr ""
 
 #: admin/partials/email_template/woo-refund-and-exchange-lite-refund-request-cancel-email.php:19
 msgid "Your Refund Request is Cancelled"
+msgstr ""
+
+#: admin/partials/woo-refund-and-exchange-lite-admin-dashboard.php:51
+msgid "RETURN REFUND AND EXCHANGE FOR WOOCOMMERCE"
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-admin-dashboard.php:52
@@ -378,9 +386,9 @@ msgstr ""
 msgid ""
 "Return Refund and Exchange for WooCommerce is a one-stop solution for "
 "complete refund management plugin for your WooCommerce store. This FREE "
-"plugin allows the admin to show a \"Refund\" button on the desired page "
-"of your store, that the customers can use to send you a refund request "
-"for their purchased product with which they are unsatisfied."
+"plugin allows the admin to show a \"Refund\" button on the desired page of "
+"your store, that the customers can use to send you a refund request for "
+"their purchased product with which they are unsatisfied."
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:30
@@ -388,9 +396,9 @@ msgid ""
 "Further, this plugin has a message feature that allows merchants and "
 "customers to connect with direct messages to solve refund related issues. "
 "Admin can set refund button text, allows customers to send reasons for "
-"refund request, set predefined reason, allow attachments along with "
-"refund request, set limits to number of attachments, set condition on "
-"products if and how long it is eligible for refund, etc."
+"refund request, set predefined reason, allow attachments along with refund "
+"request, set limits to number of attachments, set condition on products if "
+"and how long it is eligible for refund, etc."
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:35
@@ -405,6 +413,10 @@ msgstr ""
 msgid "The Free Plugin Benefits"
 msgstr ""
 
+#: admin/partials/woo-refund-and-exchange-lite-overview.php:44
+msgid "admin/image/Connect-via-Messages.png"
+msgstr ""
+
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:47
 msgid " Connect via Messages "
 msgstr ""
@@ -413,14 +425,22 @@ msgstr ""
 msgid "Allow customers to send you messages in the refund panel."
 msgstr ""
 
+#: admin/partials/woo-refund-and-exchange-lite-overview.php:59
+msgid "admin/image/Allow-And-Set-Attachments-Limit.png"
+msgstr ""
+
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:62
 msgid " Allow And Set Attachments Limit "
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:65
 msgid ""
-"Admin can allow and set a limit to the number of attachments on the "
-"refund request form."
+"Admin can allow and set a limit to the number of attachments on the refund "
+"request form."
+msgstr ""
+
+#: admin/partials/woo-refund-and-exchange-lite-overview.php:74
+msgid "admin/image/Set-Return-Refund-Conditions.png"
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:77
@@ -431,6 +451,10 @@ msgstr ""
 msgid "Admin can set conditions for the refund process."
 msgstr ""
 
+#: admin/partials/woo-refund-and-exchange-lite-overview.php:89
+msgid "admin/image/Send-Email-Notification.png"
+msgstr ""
+
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:92
 msgid " Send Email Notification"
 msgstr ""
@@ -439,14 +463,17 @@ msgstr ""
 msgid "Set emails to notify each performing step during the refund process."
 msgstr ""
 
+#: admin/partials/woo-refund-and-exchange-lite-overview.php:104
+msgid "admin/image/Manage-Product-Returns.png"
+msgstr ""
+
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:107
 msgid " Manage Product Returns "
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-overview.php:110
 msgid ""
-"Provide a complete refund system with the manage stock and the refund "
-"amount"
+"Provide a complete refund system with the manage stock and the refund amount"
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-policies.php:37
@@ -591,6 +618,11 @@ msgstr ""
 msgid "Subject"
 msgstr ""
 
+#: admin/partials/woo-refund-and-exchange-lite-return-meta.php:125
+#: includes/class-woo-refund-and-exchange-lite-onboarding-steps.php:490
+msgid "Reason"
+msgstr ""
+
 #: admin/partials/woo-refund-and-exchange-lite-return-meta.php:133
 msgid "Bank Details"
 msgstr ""
@@ -598,6 +630,10 @@ msgstr ""
 #: admin/partials/woo-refund-and-exchange-lite-return-meta.php:141
 #: admin/partials/woo-refund-and-exchange-lite-return-meta.php:149
 msgid "Attachment"
+msgstr ""
+
+#: admin/partials/woo-refund-and-exchange-lite-return-meta.php:149
+msgid "/attachment/"
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-return-meta.php:154
@@ -610,6 +646,10 @@ msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-return-meta.php:175
 msgid "Cancel Request"
+msgstr ""
+
+#: admin/partials/woo-refund-and-exchange-lite-return-meta.php:182
+msgid "admin/image/loader.gif"
 msgstr ""
 
 #: admin/partials/woo-refund-and-exchange-lite-return-meta.php:194
@@ -744,8 +784,7 @@ msgid "Multipart"
 msgstr ""
 
 #: emails/class-wps-rma-refund-request-accept-email.php:106
-msgid ""
-"Refund Request Accept for order {order_id} message from {message_date}"
+msgid "Refund Request Accept for order {order_id} message from {message_date}"
 msgstr ""
 
 #: emails/class-wps-rma-refund-request-accept-email.php:113
@@ -771,8 +810,7 @@ msgid "N/A"
 msgstr ""
 
 #: emails/class-wps-rma-refund-request-cancel-email.php:103
-msgid ""
-"Refund Request Cancel for order {order_id} message from {message_date}"
+msgid "Refund Request Cancel for order {order_id} message from {message_date}"
 msgstr ""
 
 #: emails/class-wps-rma-refund-request-cancel-email.php:110
@@ -830,12 +868,8 @@ msgstr ""
 
 #: includes/class-woo-refund-and-exchange-lite-onboarding-steps.php:486
 msgid ""
-"Let us know why you are deactivating WooCommerce Refund and Exchange Lite "
-"so we can improve the plugin"
-msgstr ""
-
-#: includes/class-woo-refund-and-exchange-lite-onboarding-steps.php:490
-msgid "Reason"
+"Let us know why you are deactivating WooCommerce Refund and Exchange Lite so "
+"we can improve the plugin"
 msgstr ""
 
 #: includes/class-woo-refund-and-exchange-lite-onboarding-steps.php:730
@@ -871,6 +905,10 @@ msgstr ""
 msgid ""
 "Unable to locate file at location \"%s\". Some features may not work "
 "properly in this plugin. Please contact us!"
+msgstr ""
+
+#: includes/class-woo-refund-and-exchange-lite.php:820
+msgid "max="
 msgstr ""
 
 #: includes/index.php:11 index.php:14 public/index.php:10
@@ -919,8 +957,7 @@ msgstr ""
 
 #: includes/woo-refund-and-exchange-lite-common-functions.php:296
 msgid ""
-"Your Giftcard has been used so you can not proceed with the exchange. "
-"Thanks"
+"Your Giftcard has been used so you can not proceed with the exchange. Thanks"
 msgstr ""
 
 #: includes/woo-refund-and-exchange-lite-common-functions.php:335
@@ -964,9 +1001,9 @@ msgstr ""
 
 #: onboarding/templates/woo-refund-and-exchange-lite-onboarding-template.php:36
 msgid ""
-"We love making new friends! Subscribe below and we promise to keep you up-"
-"to-date with our latest new plugins, updates, awesome deals and a few "
-"special offers."
+"We love making new friends! Subscribe below and we promise to keep you up-to-"
+"date with our latest new plugins, updates, awesome deals and a few special "
+"offers."
 msgstr ""
 
 #: onboarding/templates/woo-refund-and-exchange-lite-onboarding-template.php:48
@@ -1051,8 +1088,7 @@ msgstr ""
 
 #: package/rest-api/version1/class-woo-refund-and-exchange-lite-api-process.php:281
 msgid ""
-"You can only accept the refund request when the request has been made "
-"earlier"
+"You can only accept the refund request when the request has been made earlier"
 msgstr ""
 
 #: package/rest-api/version1/class-woo-refund-and-exchange-lite-api-process.php:322
@@ -1069,8 +1105,8 @@ msgstr ""
 
 #: package/rest-api/version1/class-woo-refund-and-exchange-lite-api-process.php:332
 msgid ""
-"You can only perform the refund request cancel when the request request "
-"has been made earlier"
+"You can only perform the refund request cancel when the request request has "
+"been made earlier"
 msgstr ""
 
 #: public/class-woo-refund-and-exchange-lite-public.php:79
@@ -1208,8 +1244,8 @@ msgstr ""
 
 #: woocommerce-refund-and-exchange-lite.php:327
 msgid ""
-"Woocommerce is not activated, Please activate Woocommerce first to "
-"install WooCommerce Refund and Exchange Lite."
+"Woocommerce is not activated, Please activate Woocommerce first to install "
+"WooCommerce Refund and Exchange Lite."
 msgstr ""
 
 #: wp-bakery-widgets/class-wps-rma-vc-widgets.php:47
